<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Skill Practice</string>
    <string name="welcome_to_skill_practice">Welcome To \n<font color='#1cc4b8'>Skill Practice</font></string>
    <string name="main_msg">A place where you can test your verbal, quantitative, and analytical skills.</string>
    <string name="login_now">Login Now</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_account">New Account</string>
    <string name="user_name">User Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="new_user">New User</string>
    <string name="total_score">Total Score</string>
    <string name="new_test">New Test</string>
    <string name="select_category">Select Category</string>
    <string name="retry">Retry</string>
    <string name="offline_msg">You\'re offline, check your connection!</string>
</resources>